@@ -1043,7 +1043,27 @@
 	true, false, yes, no, on, off, 0 or 1. Other values are
 	treated as 'true' while if the variable is not present at all,
 	it is treated as being 'false'.</para>
-	
+
+	<para>In order to make some configuration lines more readable
+	you may use the delimiter '\' at the end of a line to wrap
+	and concatenate the next line up to the current line. Here is 
+	an example:
+
+<programlisting>
+1    # A group with a wrapped alias line
+2    group = sms-service
+3    keyword = hello
+4    aliases = hallo;haalloo;\
+5      heelloo;haelloo;healloo
+5    text = "Hello world!"
+</programlisting>
+ 
+     The above example shows how a list for various alias keywords
+     is wrapped to two lines using the line wrap delimiter. In order
+     to use the delimiter '\' itself, you need to escape it via a
+     prefixed '\' itself. So this is '\\' to escape the wrapping
+     function and use the character in the string.</para>
+     
 </sect2>
 
 <sect2 id="includes">
