@@ -1,3 +1,11 @@
+2006-06-12  Stipe Tolj  <stolj at kannel.org>
+  * doc/userguide/userguide.xml: adding a paragraph descibing the new 
+    line wrap delimiter '\' (backslash).
+  * gwlib/cfg.c: adding support for a line wrapping delimiter '\' to
+    allow multiple lines for a single config directive.
+    Alex suggested this via a patch to the list.
+    [Msg-Id: <e5s5du$dbv$1@sea.gmane.org>]
+
 2006-06-11  Stipe Tolj  <stolj at kannel.org>
   * wap/wtp_init.c: fixing bug #350, typo which may cause a segfault.
     Thanks to <hewei.com@gmail.com> for bug report and patch.
